--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <title>Coming soon!</title>
+    <meta name="description"
+        content="ValuCloud - Azure FinOps specialists helping businesses reduce cloud costs by at least 10%. Savings you can see. Value you can trust.">
+    <meta name="keywords"
+        content="Azure FinOps, cloud cost optimization, Azure experts, cloud savings, Perth cloud services">
+    <title>ValuCloud | Azure FinOps Specialists | Savings You Can See</title>
     <style>
         html,
         body {
