--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container">
         <div class="hero-text">
             <p>ValuCloud leverages 10+ years of enterprise Azure expertise to help companies reduce their cloud
-                costs by a minimum of 10% through our FinOps optimization strategies.</p>
+                costs by a minimum of 10% per year through our FinOps optimization strategies.</p>
         </div>
         <h2>Ready to Start Saving on Azure?</h2>
         <p>Complete the form below to get in touch and see how we can work together to reduce your Azure spend!
