--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <label for="contact-phone">Phone</label>
                     <input type="tel" id="contact-phone" name="contact-phone" class="form-control">
                 </div>
-                <button type="submit" class="submit-btn">Get Your Cost Analysis</button>
+                <button type="submit" class="submit-btn">Get in Contact</button>
             </form>
         </div>
     </div>
@@ -96,9 +96,9 @@
         <div class="footer-content">
             <div class="footer-column">
                 <h3>Contact Us</h3>
-                <p>Perth, Western Australia</p>
                 <a href="mailto:sales@valucloud.com">sales@valucloud.com</a>
                 <a href="https://www.linkedin.com/company/valucloud/about"><span>LinkedIn</span></a>
+                <p>Perth, Western Australia</p>
             </div>
         </div>
         <div class="copyright">
