Change to MS forms

--- a/index.html
+++ b/index.html
@@ -59,35 +59,7 @@
         <h2>Ready to Start Saving on Azure?</h2>
         <p>Complete the form below to get in touch and see how we can work together to reduce your Azure spend!
         </p>
-        <div class="contact-form">
-            <form id="azure-cost-form" action="mailto:sales@valucloud.com?subject=Website Enquiry" method="post"
-                enctype="text/plain">
-                <div class="form-group">
-                    <label for="business-name">Business Name</label>
-                    <input type="text" id="business-name" name="business-name" class="form-control" required>
-                </div>
-                <div class="form-group">
-                    <label for="azure-spend">Monthly Azure Spend</label>
-                    <select id="azure-spend" name="azure-spend" class="form-control" required>
-                        <option value="">Select your monthly spend</option>
-                        <option value="$5,000-$20,000">$5,000-$20,000</option>
-                        <option value="$20,000-$50,000">$20,000-$50,000</option>
-                        <option value="$50,000-$100,000">$50,000-$100,000</option>
-                        <option value="$100,000-$200,000">$100,000-$200,000</option>
-                        <option value="$200,000+">$200,000+</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="contact-email">Email</label>
-                    <input type="email" id="contact-email" name="contact-email" class="form-control" required>
-                </div>
-                <div class="form-group">
-                    <label for="contact-phone">Phone</label>
-                    <input type="tel" id="contact-phone" name="contact-phone" class="form-control">
-                </div>
-                <button type="submit" class="submit-btn">Get in Contact</button>
-            </form>
-        </div>
+<iframe width="640px" height="1000px" src="https://forms.office.com/r/7LM9gVSUpD?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
     </div>
 </section>
 <!-- Footer -->
